<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devvindan.pomodoro.PomodoroMenu">

    <Button
        android:id="@+id/timerButton"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:text="@string/menu_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/menu_settings"
        app:layout_constraintEnd_toEndOf="@+id/timerButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/timerButton"
        app:layout_constraintTop_toBottomOf="@+id/timerButton" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/menu_info"
        app:layout_constraintEnd_toEndOf="@+id/settingsButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/settingsButton"
        app:layout_constraintTop_toBottomOf="@+id/settingsButton" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/menu_quit"
        app:layout_constraintEnd_toEndOf="@+id/infoButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/infoButton"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />
</android.support.constraint.ConstraintLayout>
