<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devvindan.pomodoro.PomodoroSettings">

    <Button
        android:id="@+id/backButton"
        android:layout_width="226dp"
        android:layout_height="66dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/workView"
        android:layout_width="103dp"
        android:layout_height="34dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="92dp"
        android:text="@string/settings_work"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shortBreakView"
        android:layout_width="177dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/settings_shot_break"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workView" />

    <TextView
        android:id="@+id/longBreakView"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_long_break"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortBreakView" />

    <EditText
        android:id="@+id/workEdit"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/shortBreakEdit"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/workEdit"
        app:layout_constraintTop_toBottomOf="@+id/workEdit" />

    <EditText
        android:id="@+id/longBreakEdit"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/workEdit"
        app:layout_constraintTop_toBottomOf="@+id/shortBreakEdit" />

</android.support.constraint.ConstraintLayout>
